--- a/references.bib
+++ b/references.bib
@@ -1,13 +1,13 @@
-@book{hansen2022introduction,
-  title={Introduction to Econometrics},
-  author={Hansen, Bruce E.},
-  year={2022},
-  publisher={Princeton University Press}
+@book{hansen2021introduction,
+  title = {Introduction to Econometrics},
+  author = {Hansen, Bruce E.},
+  year = {2021},
+  publisher = {University of Wisconsin}
 }
 
-@book{hansen2022econometrics,
-  title={Econometrics},
-  author={Hansen, Bruce E.},
-  year={2022},
-  publisher={Princeton University Press}
+@book{hansen2021econometrics,
+  title = {Econometrics},
+  author = {Hansen, Bruce E.},
+  year = {2021},
+  publisher = {University of Wisconsin}
 }
