--- a/references.bib
+++ b/references.bib
@@ -1,11 +1,11 @@
-@book{hansen2021introduction,
+@book{hansen2021intro,
   title = {Introduction to Econometrics},
   author = {Hansen, Bruce E.},
   year = {2021},
   publisher = {University of Wisconsin}
 }
 
-@book{hansen2021econometrics,
+@book{hansen2021econ,
   title = {Econometrics},
   author = {Hansen, Bruce E.},
   year = {2021},
